fix: add table footer & truncate text (#218)
* fix: add table footer & truncate text

#157

* fix: fix the first 3 columns in table, header and make toolbar sticky

#157

* fix: updating grid css

#157

* fix: update the toolbar position, scrolling behaviour & grid interactivity

#223

* refactor: updated grid

* refactor: added margin at the bottom of table

* refactor: changed headings col span to 3

---------

--- a/src/main.css
+++ b/src/main.css
@@ -681,6 +681,11 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .inset-0 {
   top: 0px;
   right: 0px;
@@ -710,12 +715,12 @@ video {
   bottom: 3rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .left-0 {
   left: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
 }
 
 .right-0 {
@@ -765,6 +770,14 @@ video {
 
 .ml-auto {
   margin-left: auto;
+}
+
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mb-5 {
@@ -857,20 +870,20 @@ video {
   width: 0.75rem;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-10 {
-  width: 2.5rem;
+.w-40 {
+  width: 10rem;
 }
 
 .w-16 {
   width: 4rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .grow {
@@ -881,8 +894,14 @@ video {
   table-layout: fixed;
 }
 
-.border-collapse {
-  border-collapse: collapse;
+.border-separate {
+  border-collapse: separate;
+}
+
+.border-spacing-0 {
+  --tw-border-spacing-x: 0px;
+  --tw-border-spacing-y: 0px;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 
 .-translate-y-1\/2 {
@@ -1020,6 +1039,14 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-l-0 {
+  border-left-width: 0px;
+}
+
+.border-t-0 {
+  border-top-width: 0px;
+}
+
 .border-whiteSmoke-700 {
   --tw-border-opacity: 1;
   border-color: rgb(99 99 99 / var(--tw-border-opacity));
@@ -1035,9 +1062,9 @@ video {
   border-color: rgb(87 87 87 / var(--tw-border-opacity));
 }
 
-.border-slate-300 {
+.border-gray-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(203 213 225 / var(--tw-border-opacity));
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .border-whiteSmoke-800 {
@@ -1073,6 +1100,11 @@ video {
   background-color: rgb(87 87 87 / var(--tw-bg-opacity));
 }
 
+.bg-black-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 29 29 / var(--tw-bg-opacity));
+}
+
 .bg-black-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(20 20 20 / var(--tw-bg-opacity));
@@ -1086,11 +1118,6 @@ video {
 .bg-whiteSmoke-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
-}
-
-.bg-black-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 29 29 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-80 {
@@ -1218,6 +1245,10 @@ video {
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .uppercase {
